--- a/src/components/ProfileForm/ProfileForm.module.css
+++ b/src/components/ProfileForm/ProfileForm.module.css
@@ -1,6 +1,6 @@
 .box{
     width: 618px;
-    height: 100%px;
+    height: 100%;
     position: absolute;
     top: 20px;
     bottom: 20px;
@@ -11,6 +11,7 @@
     padding: 40px 80px;
     border-radius: 40px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    
 }
 
 .h{
